30.08.16 - 2nd iteration done MOM I DID IT run out of memory - increase threshold